# kadena-ethereum-bridge

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  ethereum.cabal
.github/workflows/: cabal-ci.yaml
bench/: Main.hs
bench-secp256k1/: Main.hs
cbits/: keccak.c  keccak.h  prime.c  prime.h
src-secp256k1/Crypto/: Secp256k1.hs
src-secp256k1/Crypto/Secp256k1/: Internal.hs
src/Ethereum/: Block.hs  Ethhash.hs  HP.hs  Header.hs  Misc.hs  RLP.hs  Receipt.hs  Transaction.hs  Trie.hs  Utils.hs
src/Ethereum/Ethhash/: CacheSizes.hs  DataSizes.hs
src/Ethereum/HP/: Internal.hs
src/Ethereum/Receipt/: ReceiptProof.hs
src/Numeric/: Checked.hs
src/Numeric/Checked/: Int.hs  Word.hs
test/: Main.hs
test-secp256k1/: Main.hs
test-secp256k1/Test/Crypto/Secp256k1/: Internal.hs
test/Test/: Orphans.hs  Utils.hs
test/Test/Ethereum/: Block.hs  Ethhash.hs  HP.hs  RLP.hs  Receipt.hs  Trie.hs
