cabal-version: 3.0
name: ethereum
version: 0.1.0.0
synopsis: Ethereum related Datatypes and Algorithms
homepage: https://github.com/larskuhtz/ethereum
bug-reports: https://github.com/larskuhtz/ethereum/issues
license: BSD-3-Clause
license-file: LICENSE
author: Lars Kuhtz
maintainer: lakuhtz@gmail.com
copyright: Copyright (c) 2020 Kadena LLC.
category: Data
tested-with:
    GHC==8.10.2
    GHC==8.8.4
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/larskuhtz/ethereum.git

library
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options:
        -Wall
    exposed-modules:
        Ethereum.Block
        Ethereum.Ethhash
        Ethereum.Ethhash.CacheSizes
        Ethereum.Ethhash.DataSizes
        Ethereum.HP
        Ethereum.HP.Internal
        Ethereum.Header
        Ethereum.Misc
        Ethereum.RLP
        Ethereum.Receipt
        Ethereum.Transaction
        Ethereum.Trie
        Ethereum.Utils

        Numeric.Checked
    build-depends:
          base >=4.11 && <4.15
        , aeson >=1.4
        , base16-bytestring >=1.0
        , binary >=0.8
        , bytestring >=0.10
        , cryptonite >=0.27
        , exceptions >=0.10
        , hashable >=1.3
        , lens >=4.19
        , memory >=0.15
        , primitive >=0.7
        , text >=1.2
        , unordered-containers >0.2
        , vector >=0.12

test-suite ethereum-tests
    type: exitcode-stdio-1.0
    default-language: Haskell2010
    hs-source-dirs: test
    other-modules:
        Test.Ethereum.Block
        Test.Ethereum.Ethhash
        Test.Ethereum.HP
        -- Test.Ethereum.Header
        Test.Ethereum.RLP
        Test.Ethereum.Receipt
        Test.Ethereum.Trie
        Test.Orphans
        Test.Utils
    ghc-options:
        -Wall
        -threaded
        -with-rtsopts=-N
    main-is: Main.hs
    build-depends:
          ethereum
        , QuickCheck >=2.14
        , aeson >=1.4
        , base >=4.11 && <4.15
        , base16-bytestring >=1.0
        , bytestring >=0.10
        , quickcheck-instances >=0.3
        , raw-strings-qq >=1.1
        , tasty >=1.3
        , tasty-hunit >=0.10
        , tasty-quickcheck >=0.10
        , unordered-containers >0.2
        , deepseq >=1.4

