cabal-version: 2.4
name: ethereum
version: 0.1.0.0
synopsis: Ethereum related Datatypes and Algorithms
homepage: https://github.com/larskuhtz/ethereum
bug-reports: https://github.com/larskuhtz/ethereum/issues
license: BSD-3-Clause
license-file: LICENSE
author: Lars Kuhtz
maintainer: lakuhtz@gmail.com
copyright: Copyright (c) 2020 Kadena LLC.
category: Data
tested-with:
    GHC==9.0.1
    GHC==8.10.5
    GHC==8.8.4
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/larskuhtz/ethereum.git

flag openssl-use-pkg-config
    description: Use pkg-config to find OpenSSL (macOS and linux only).
    default: False
    manual: True

common openssl-common
    c-sources:
        cbits/keccak.c
        cbits/keccak.h
        cbits/prime.c
        cbits/prime.h
    if flag(openssl-use-pkg-config)
        pkgconfig-depends: libcrypto
    else
        extra-Libraries: crypto

library
    import: openssl-common
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options:
        -Wall
    exposed-modules:
        Ethereum.Block
        Ethereum.Ethhash
        Ethereum.Ethhash.CacheSizes
        Ethereum.Ethhash.DataSizes
        Ethereum.HP
        Ethereum.HP.Internal
        Ethereum.Header
        Ethereum.Misc
        Ethereum.RLP
        Ethereum.Receipt
        Ethereum.Receipt.ReceiptProof
        Ethereum.Transaction
        Ethereum.Trie
        Ethereum.Utils

        Numeric.Checked
    build-depends:
        , base >=4.11 && <5
        , aeson >=1.4
        , async >= 2.2
        , base16-bytestring >=0.1
        , binary >=0.8
        , bytestring >=0.10
        , exceptions >=0.10
        , hashable >=1.2
        , hashes >=0.2.1.1
        , lens >=4.17
        , primitive >=0.6
        , text >=1.2
        , unordered-containers >=0.2
        , containers >=0.6
        , vector >=0.12

test-suite ethereum-tests
    import: openssl-common
    type: exitcode-stdio-1.0
    default-language: Haskell2010
    hs-source-dirs: test
    other-modules:
        Test.Ethereum.Block
        Test.Ethereum.Ethhash
        Test.Ethereum.HP
        -- Test.Ethereum.Header
        Test.Ethereum.RLP
        Test.Ethereum.Receipt
        Test.Ethereum.Trie
        Test.Orphans
        Test.Utils
    ghc-options:
        -Wall
        -threaded
        -with-rtsopts=-N
    main-is: Main.hs
    build-depends:
        , ethereum
        , QuickCheck >=2.14
        , aeson >=1.4
        , base >=4.11 && <5
        , base16-bytestring >=0.1
        , bytestring >=0.10
        , deepseq >=1.4
        , quickcheck-instances >=0.3
        , raw-strings-qq >=1.1
        , tasty >=1.3
        , tasty-hunit >=0.10
        , tasty-quickcheck >=0.10
        , text >=1.2
        , unordered-containers >=0.2

benchmark ethhash
    import: openssl-common
    type: exitcode-stdio-1.0
    default-language: Haskell2010
    hs-source-dirs: bench
    ghc-options:
        -Wall
        -threaded
        -with-rtsopts=-N
    main-is: Main.hs
    build-depends:
        , ethereum
        , base >=4.11 && <5
        , clock >=0.8

